--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,8 @@
         "psr-4": {
             "seregazhuk\\React\\PromiseTesting\\tests\\": "tests/"
         }
+    },
+    "require-dev": {
+        "codeclimate/php-test-reporter": "^0.4.4"
     }
 }
