--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=5.6",
         "react/promise": "^2.5",
-        "phpunit/phpunit": "~5.0",
+        "phpunit/phpunit": "~5.0|~6",
         "clue/block-react": "^1.2"
     },
     "autoload": {
