--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
   - mkdir -p build/logs
   - ls -al
 
-script: phpunit
+script: vendor/bin/phpunit
 
 after_script:
   - vendor/bin/test-reporter
