--- a/composer.json
+++ b/composer.json
@@ -33,5 +33,8 @@
     },
     "require-dev": {
         "codeclimate/php-test-reporter": "^0.4.4"
+    },
+    "scripts": {
+      "ci:tests": "vendor/bin/phpunit tests"
     }
 }
