--- a/.travis.yml
+++ b/.travis.yml
@@ -9,15 +9,8 @@ addons:
 
 jobs:
     include:
-        - stage: "PHP7.2 - lowest"
-          php: 7.2
-          script:
-              - composer update -n --prefer-dist --prefer-lowest --no-suggest
-              - composer dump-autoload
-              - composer ci:tests
-
-        - stage: "PHP7.3 - highest"
-          php: 7.3
+        - stage: "PHP8.0"
+          php: 8.0
           script:
               - composer update -n --prefer-dist --no-suggest
               - composer dump-autoload
