--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,11 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
-        "react/promise": "^2.7",
-        "phpunit/phpunit": "^8.2",
-        "clue/block-react": "^1.3"
+        "php": ">=8.0",
+        "react/promise": "^2.8",
+        "phpunit/phpunit": "^9.5",
+        "phpunit/php-code-coverage": "^9.2",
+        "clue/block-react": "^1.4"
     },
     "autoload": {
         "psr-4": {
@@ -30,9 +31,6 @@
         "psr-4": {
             "seregazhuk\\React\\PromiseTesting\\tests\\": "tests/"
         }
-    },
-    "require-dev": {
-        "codeclimate/php-test-reporter": "^0.4.4"
     },
     "scripts": {
       "ci:tests": "vendor/bin/phpunit tests"
